--- a/k8s-prehelm-yaml-files/k8s-galaxy-data-volume.yaml
+++ b/k8s-prehelm-yaml-files/k8s-galaxy-data-volume.yaml
@@ -3,12 +3,16 @@ apiVersion: v1
 metadata:
   name: k8s-galaxy-data-volume
   labels:
-    type: local
+    type: nfs-on-master
 spec:
   storageClassName: manual
   capacity:
-    storage: 10Gi
+    storage: 3Gi
   accessModes:
     - ReadWriteOnce
-  hostPath:
-    path: "/tmp/data"
+  #hostPath:
+  #  path: "/tmp/data"
+  nfs:
+    server: k8s-master  # how the hell should I know the weave IP in a generic setting?
+    path: "/home/centos/galaxy-data"
+
