--- a/roles/common/tasks/main.yaml
+++ b/roles/common/tasks/main.yaml
@@ -3,6 +3,7 @@
 # and don't start checking for 10 seconds
 - local_action: wait_for port=22 host="{{ ansible_ssh_host | default(inventory_hostname) }}" search_regex=OpenSSH delay=10
 
+#seems this is what ansible is instructed to do before instance is deemed ready (some gzip going on, taking quite some time...)
 - name: Wait for cloud-init to finish
   raw: while ! test -f /var/lib/cloud/instance/boot-finished; do sleep 1; done 
   tags:
