--- a/roles/kubeadm/handlers/main.yaml
+++ b/roles/kubeadm/handlers/main.yaml
@@ -1,5 +1,11 @@
-- name: Restart kubelet
+- name: restart kubelet
   systemd:
     state: restarted
     daemon_reload: yes
     name: kubelet
+
+- name: restart dnsmasq
+  systemd:
+    state: restarted
+    name: dnsmasq
+
