--- a/roles/kubeadm/tasks/main.yaml
+++ b/roles/kubeadm/tasks/main.yaml
@@ -29,8 +29,8 @@
     update_cache: yes
   with_items:
     - docker
-    - kubelet
-    - kubeadm
+    - kubelet-1.7.3-1
+    - kubeadm-1.7.3-1
     - kubectl
     - kubernetes-cni
     - nfs-utils
@@ -41,6 +41,12 @@
     name: docker 
     enabled: yes
 
+- name: Update kubernetes packages
+  yum:
+    name: "*"
+    state: latest
+    update_cache: yes
+
 - name: Start kubelet service
   systemd: 
     state: started 
@@ -48,13 +54,12 @@
     enabled: yes
 
 - name: Start nfs service
-  #hostname: "{{ name }}-master"
   systemd:
     state: started
     name: nfs-server.service
     enabled: yes
 
-- name: add hosts
+- name: Add hosts
   lineinfile:
     dest: "/etc/hosts"
     regexp: ".*{{ hostvars[item].ansible_hostname }}$"
@@ -62,6 +67,11 @@
     state: present
   when: hostvars[item].ansible_hostname is defined
   with_items: "{{groups['all'] | default([])}}"
+
+- name: Add local host
+  command: 'echo -e "server=8.8.8.8\nserver=8.8.4.4" > /etc/dnsmasq.conf && echo -e "$(hostname -i)\tlocalhost.$(hostname -d)" >> /etc/hosts && echo "1" > /proc/sys/net/bridge/bridge-nf-call-iptables'
+  notify: 
+    - restart dnsmasq
 
 - name: Create OpenStack cloud configuration
   template:
@@ -75,4 +85,4 @@
     dest: /etc/systemd/system/kubelet.service.d/10-kubeadm.conf
     mode: 0600
   notify:
-    - Restart kubelet
+    - restart kubelet
